--- a/#1/index.html
+++ b/#1/index.html
@@ -14,5 +14,8 @@
 
     <h1>Пункт № 4</h1>
     <img src="4.JPG" style="width: 1500px; height: 1500px;"/>
+    
+    <h1>Пункт № 6</h1>
+    <img src="6.JPG" style="width: 1500px; height: 1500px;"/>
 </body>
 </html>
